--- a/doc/manual/viennagrid.tex
+++ b/doc/manual/viennagrid.tex
@@ -66,6 +66,7 @@
 
 \renewcommand{\matrix}[1]{\boldsymbol{#1}}
 \renewcommand{\vector}[1]{\boldsymbol{#1}}
+\newcommand{\LandauO}{\mathcal{O}}
 
 \renewcommand{\arraystretch}{1.2}
 
