Added test for external linkage (fixed minor bugs...). Added tutorial for storage of data on elements.

--- a/doc/manual/domainconfig.tex
+++ b/doc/manual/domainconfig.tex
@@ -291,7 +291,7 @@ for globally disabling the storage of IDs. To selectively enable IDs, \lstinline
 
 
 
-\TIP{Have a look at \texttt{examples/tutorial/slim\_domain.cpp} and selectively enable or disable the storage of elements to see the impact on total memory consumption. Note that the bytes per object may differ from Tab.~\ref{tab:full-domain-memory} and Tab.~\ref{tab:slim-domain-memory} depending on the use of local orientations and integral IDs.}
+\TIP{Have a look at \texttt{examples/tutorial/slim\_domain.cpp} and selectively enable or disable the storage of elements, local orientations and IDs to see the impact on total memory consumption. Note that the bytes per object may differ from Tab.~\ref{tab:full-domain-memory} and Tab.~\ref{tab:slim-domain-memory} depending on the use of local orientations and integral IDs.}
 
 \NOTE{Disabling $n$-cell IDs eliminates the possibility to store and access data for the respective $n$-cells with $\LandauO(1)$ costs, see Chapter [MISSING].}
 
