* Replaced 'subelement' by 'bndcell' in code. * Added some more chapters to manual. * Finished yesterday's example.

--- a/doc/manual/algorithms.tex
+++ b/doc/manual/algorithms.tex
@@ -1,8 +1,21 @@
 \chapter{Algorithms} \label{chap:algorithms}
 
 \section{Point-Based}
+ % cross_prod
+ % inner_prod
+ % norm
+ % spanned_volume
 
-\section{Cell-Based}
+\section{$n$-Cell-Based}
+ % centroid
+ % circumcenter
+ % surface
+ % volume
 
 \section{Domain-Based}
+ % boundary
+ % interface
+ % refinement
+ % Voronoi
+ 
 Works also for segments...
