--- a/doc/manual/design-decisions.tex
+++ b/doc/manual/design-decisions.tex
@@ -1,2 +1,13 @@
 \chapter{Design Decisions} \label{chap:design}
 
+ \section{Iterators}
+ Why \lstinline|viennagrid::ncells<>| and so much STL-like.
+
+ \section{Default Behavior}
+ Why {\ViennaGrid} is 'fat' (high memory) and 'slow' (data access) by default.
+
+ \section{Segments}
+ Not full-fledged views yet...
+
+ \section{The Use of ViennaData}
+ Outsourcing to an external library is a gem here :-)
