--- a/doc/manual/entities.tex
+++ b/doc/manual/entities.tex
@@ -14,7 +14,7 @@ The underlying space in {\ViennaGrid} is the $n$-dimensional Euclidian space $\m
 A \emph{point} refers to an element $\vector x$ in $\mathbb{R}^k$ and does not carry any topological information. On the other hand, a point equivalently refers to the vector from the origin pointing to $\vector x$.
 
 
-%%%%%%%%% Figure here %%%%%%%%%%%%%%%
+%%%%%%%%% Figure here explaining coordinate systems %%%%%%%%%%%%%%%
 
 
 Given a configuration class \lstinline|Config| for {\ViennaGrid} (cf.~Chap.~\ref{chap:domainconfig}), a point is defined and manipulated as follows:
