--- a/doc/manual/internals.tex
+++ b/doc/manual/internals.tex
@@ -1,2 +1,9 @@
 \chapter{Library Internals} \label{chap:internals}
 
+% Maybe skip?
+
+\section{Recursive Inheritance}
+% Explain how elements, domain and segment are programmed
+
+\section{$n$-Cell Storage in Domain and Segment}
+% Explain the data structures used
