--- a/doc/manual/viennagrid.bib
+++ b/doc/manual/viennagrid.bib
@@ -83,8 +83,18 @@
    title = {{ARPREC high-precision library}},
    URL = {http://crd.lbl.gov/~dhbailey/mpdist/}
 }
+% -----------------------------------------------
+@misc{VTK,
+   title = {{VTK - Visualization Toolkit}},
+   URL = {http://www.vtk.org/}
+}
+% -----------------------------------------------
+@misc{VTKfileformat,
+   title = {{VTK File Formats}},
+   URL = {http://www.vtk.org/VTK/img/file-formats.pdf}
+}
 
-
+http://www.vtk.org/VTK/img/file-formats.pdf
 
 
 
