--- a/doc/manual/viennagrid.tex
+++ b/doc/manual/viennagrid.tex
@@ -88,19 +88,23 @@
 
 \clearpage
 \pagenumbering{arabic}
-\include{introduction}
-\include{installation}
-\include{entities}
-\include{domainconfig}
-\include{domainsetup}
+
+\include{introduction} %DONE
+\include{installation} %DONE
+\include{entities}     %Updates required
+\include{domainconfig} %DONE
+\include{domainsetup}  %DONE
 \include{iterators}
 \include{algorithms}
 \include{io}
-\include{benchmarks}
+\include{data}
+%\include{benchmarks}  %Will be added in some later release. A single day has 24 hours only ;-)
 \include{internals}
 \include{design-decisions}
-\include{changelogs}
-\include{license}
+\include{orientations} 
+\include{versioning}   %DONE
+\include{changelogs}   %DONE
+\include{license}      %DONE
 
 %\section{Bibliography}
 \begingroup
